testing/framework/resources/Functional/Failing/hbase/not_similar.e_tsv
900	holly brown	33	libertarian	532.06	1047	2014-12-11 11:46:57.0
947	holly polk	40	libertarian	476.13	7734	2014-05-03 15:14:25.0
533	bob polk	57	libertarian	642.11	16158	2014-06-13 05:45:31.0
33	holly brown	64	republican	231.81	23550	2014-03-11 08:51:32.0
342	bob polk	36	republican	778.11	15710	2015-01-21 00:34:07.0
888	holly polk	66	republican	751.64	432	2014-08-07 18:56:03.0
605	bob johnson	46	libertarian	76.02	4736	2014-02-26 18:14:53.0
723	bob brown	51	green	478.49	22872	2014-06-25 21:35:41.0
794	holly brown	77	independent	132.62	28664	2014-05-02 18:14:09.0
